# scenegraph

OpenGL_SceneGraph_Stussman/Code/: CGr_OpenGl_Aufgaben.sln
OpenGL_SceneGraph_Stussman/Code/Aufgabe1/: Aufgabe1.vcproj  draw.cpp  draw.h  main.h
OpenGL_SceneGraph_Stussman/Code/Aufgabe2/: draw.cpp  main.cpp
OpenGL_SceneGraph_Stussman/Code/Aufgabe3/: Aufgabe3.vcproj  draw.cpp  draw.h  main.h
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/: Aufgabe4.vcproj  Makefile.am  builder.cpp  builder.h  clock.h  configure.in  draw.cpp  draw.h  main.cpp  main.h  makefile  planetdefs.cpp  shadow.h  visitors.cpp  visitors.h
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/header/: draw.h
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/header/factories/: builder.h
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/header/visitors/: visitors.h
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/include/: clock.h  draw.h  main.h  material.h  planetdefs.h  scene.h
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/include/actions/: actionbase.h  moveaction.h  onoffaction.h  rotationaction.h  shootaction.h
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/include/factories/: ObjLoader.h  TextureManager.h  abstractspawn.h  actionfactory.h  builder.h
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/include/nodes/: abstractnode.h  abstractspawn.h  allnodes.h  billboard.h  camfollownode.h  colornode.h  destructornode.h  laserspawn.h  lightnode.h  linenode.h  movenode.h  nodes.h  polygonObjectNode.h  ringnode.h  rotationnode.h  rotornode.h  scalatornode.h  separator.h  shadownode.h  shotspawn.h  spherenode.h  starsnode.h  switchnode.h  textureanimator.h  texturenode.h  togglenode.h  transformseparator.h  translationnode.h  translatornode.h
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/include/visitors/: abstractvisitor.h  destructorvisitor.h  eventvisitor.h  printvisitor.h  visitor.h  visitors.h
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/objects/: ship.mtl
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/src/: Makefile.am  clock.cpp  createTexture.cpp  draw.cpp  main.cpp  material.cpp  planetdefs.cpp  scene.cpp  shadow.cpp
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/src/actions/: actionbase.cpp  onoffaction.cpp  rotationaction.cpp  shootaction.cpp
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/src/factories/: TextureManager.cpp  actionfactory.cpp  builder.cpp
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/src/nodes/: abstractnode.cpp  abstractspawn.cpp  billboard.cpp  colornode.cpp  destructornode.cpp  groupnode.cpp  laserspawn.cpp  lightnode.cpp  linenode.cpp  materialnode.cpp  movenode.cpp  nodes.cpp  polygonObjectNode.cpp  quad.cpp  ringnode.cpp  rotationnode.cpp  rotornode.cpp  scalatornode.cpp  separator.cpp  shadownode.cpp  shotspawn.cpp  spherenode.cpp  starsnode.cpp  switchnode.cpp  texturenode.cpp  togglenode.cpp  translationnode.cpp  translatornode.cpp
OpenGL_SceneGraph_Stussman/Code/Aufgabe4/src/visitors/: abstractvisitor.cpp  destructorvisitor.cpp  eventvisitor.cpp  printvisitor.cpp  src_splitter.py  visitor.cpp  visitors.cpp
trunk/OpenGL_SceneGraph_Stussman/Code/Aufgabe1/: main.cpp
trunk/OpenGL_SceneGraph_Stussman/Code/Aufgabe2/: Aufgabe2.vcproj  draw.h  main.h
trunk/OpenGL_SceneGraph_Stussman/Code/Aufgabe3/: draw.cpp  main.cpp  shadow.cpp  shadow.h
trunk/OpenGL_SceneGraph_Stussman/Code/Aufgabe4/: Aufgabe4.vcproj  build.sh  builder.cpp  builder.h  camera.cpp  clock.cpp  clock.h  draw.cpp  draw.h  main.cpp  main.h  makefile  nodes.cpp  nodes.h  planetdefs.cpp  planetdefs.h  planets.h  visitors.cpp  visitors.h
trunk/OpenGL_SceneGraph_Stussman/Code/Aufgabe4/Textures/: Thumbs.db
trunk/OpenGL_SceneGraph_Stussman/Code/Aufgabe4/header/: builder.h  nodes.h  planetdefs.h
trunk/OpenGL_SceneGraph_Stussman/Code/Aufgabe4/header/nodes/: nodes.h
trunk/OpenGL_SceneGraph_Stussman/Code/Aufgabe4/header/visitors/: visitors.h
trunk/OpenGL_SceneGraph_Stussman/Code/Aufgabe4/include/: draw.h  planetdefs.h  scene.h
trunk/OpenGL_SceneGraph_Stussman/Code/Aufgabe4/objects/: spaceship.mtl
trunk/OpenGL_SceneGraph_Stussman/Code/Aufgabe4/src/: Makefile.am  clock.cpp  draw.cpp  main.cpp  material.cpp  planetdefs.cpp  scene.cpp
(+93 files in other folders)
